# WordHop

./: README.md  hello.txt  main.py  pyproject.toml
scripts/: image_generation.py  mood_gen.py  pdf_to_text.py  pipeline.py  read_pdf.py  record.py  stt.py  translate.py  tts.py
