[project]
name = "wordhop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.57.0",
    "fitz>=0.0.1.dev2",
    "llama-api-client>=0.1.0",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
